--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
-      - run: pip install -r requirements.txt 
+      - run: |
+        pwd
+        #pip install -r requirements.txt 
       - run: python manage.py test    
   build_image:
     runs-on: ubuntu-latest # operating system your code will run on
