--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,13 +8,15 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
+        with:
+          python-version: '3.10.9'
       - run: |
-        pwd
-        #pip install -r requirements.txt 
+          pwd
       - run: python manage.py test    
   build_image:
     runs-on: ubuntu-latest # operating system your code will run on
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+      - name: Build Docker file
+      - run:  |
+          echo '1'
