--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,13 +10,11 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10.9'
-      - run: |
-          pwd
+      - run: pwd
       - run: python manage.py test    
   build_image:
     runs-on: ubuntu-latest # operating system your code will run on
     steps:
       - uses: actions/checkout@v3
       - name: Build Docker file
-      - run:  |
-          echo '1'
+      - run: pwd
