--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,10 +10,14 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10.9'
-      - run: pwd
+      - run: cd /home/runner/work/django-k8s-web1/django-k8s-web1/web
+      - run: pip install -r requirements.txt
       - run: python manage.py test    
   build_image:
     runs-on: ubuntu-latest # operating system your code will run on
     steps:
       - uses: actions/checkout@v3
-      - run: pwd
+      - run: |
+          cd /home/runner/work/django-k8s-web1/django-k8s-web1/web
+          docker build -t registry.digitalocean.com/cfe-django-k8s/web:v1 -f Dockerfile .
+
