--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,9 +10,11 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10.9'
-      - run: cd /home/runner/work/django-k8s-web1/django-k8s-web1/web
-      - run: pip install -r requirements.txt
-      - run: python manage.py test    
+      - run: |
+          cd /home/runner/work/django-k8s-web1/django-k8s-web1/web
+          pip install -r requirements.txt
+          python manage.py test    
+
   build_image:
     runs-on: ubuntu-latest # operating system your code will run on
     steps:
