--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,17 +3,22 @@ name: Deploy to Digital Ocean
 on: [push]
 
 jobs:
-  test_project:
+  build:
     runs-on: ubuntu-latest # operating system your code will run on
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10.9'
-      - run: |
+      - name: Install Dependencies
+        run: |
           cd /home/runner/work/django-k8s-web1/django-k8s-web1/web
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
-          python manage.py test    
+      - name: Run Tests
+        run: |
+          cd /home/runner/work/django-k8s-web1/django-k8s-web1/web
+          python manage.py test     
 
   build_image:
     runs-on: ubuntu-latest # operating system your code will run on
@@ -22,4 +27,11 @@ jobs:
       - run: |
           cd /home/runner/work/django-k8s-web1/django-k8s-web1/web
           docker build -t registry.digitalocean.com/cfe-django-k8s/web:v1 -f Dockerfile .
+          docker login registry.digitalocean.com
+
+
+      - run: |
+          ls -la 
+  push_image: 
+    runs-on: ubuntu-latest # operating system your code will run on
 
