--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,10 +3,10 @@ name: Build Docker Container and Push to DO Registry
 on: [push]
 
 jobs:
-
-  test_django:
+  test_django_job:
     uses: Aleksbogdanov12/django-k8s-web1/django/.github/workflows/main.yml@main
   docker-build:
     runs-on: ubuntu-latest # operating system your code will run on
+    needs: test_django_job
     steps:
       - uses: actions/checkout@v3
