--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ jobs:
     uses: Aleksbogdanov12/django-k8s-web1/.github/workflows/main.yml@main
   docker-build:
     runs-on: ubuntu-latest # operating system your code will run on
-    needs: test_django_job
+    needs: [test_django_job]
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
@@ -27,7 +27,7 @@ jobs:
       - name: Push image
         run: |
           docker push registry.digitalocean.com/cfe-django-k8s/web --all-tags
-          
+
 
 
 
