--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,6 +38,23 @@ jobs:
       - name: K8s cluster kubeconfig file short-lived creds
         run: |
           doctl kubernetes cluster kubeconfig save --expiry-seconds 600 ${{ env.CLUSTER_NAME }}
+      - name: Update secrets
+        run: |
+          cat << EOF >> web/.env.prod
+          DJANGO_SUPERUSER_USERNAME=admin
+          DJANGO_SUPERUSER_PASSWORD=${{ secrets.DJANGO_SUPERUSER_PASSWORD }} 
+          DJANGO_SUPERUSER_EMAIL=${{ secrets.DJANGO_SUPERUSER_EMAIL }} 
+          DJANGO_SECRET_KEY=${{ secrets.DJANGO_SECRET_KEY }}  
+          ENV_ALLOWD_HOST=${{ secrets.ENV_ALLOWD_HOST }}
+          POSTGRES_DB=${{ secrets.POSTGRES_DB }}
+          POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}
+          POSTGRES_USER=${{ secrets.POSTGRES_USER }}
+          POSTGRES_HOST=${{ secrets.POSTGRES_HOST }}
+          POSTGRES_PORT=2${{ secrets.POSTGRES_PORT }}
+          EOF
+          kubectl delete secret django-k8s-web-prod-env
+          kubectl create secret generic django-k8s-web-prod-env --from-env-file=web/.env.prod
+
       - name: Update Deployment image
         run: |
           kubectl set image deployment/django-k8s-web-deployment django-k8s-web=registry.digitalocean.com/cfe-django-k8s/web:${GITHUB_SHA::7}
@@ -47,7 +64,7 @@ jobs:
       - name: Migrate Database
         run: |
           export SINGLE_RUNNING_POD=$(kubectl get pod -l app=django-k8s-web-deployment -o jsonpath="{.items[0].metadata.name}")
-          kubectl exec -it SINGLE_RUNNING_POD -- bash /app/migrate.sh
+          kubectl exec -it $SINGLE_RUNNING_POD -- bash /app/migrate.sh
 
 
 
